# shorts-maker

./: .gitignore  LICENSE  README.md  SKILL.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.planning/: BACKLOG.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
data/: monetization_rules.yaml  profanity_wordlist.yaml
docs/: MANUAL_TESTING.md  metadata-writing-ru.md  publish-queue.md  register-ru.md  tiktok-app-setup-ru.md  viral-clips-ru.md
scripts/: audio_energy.py  candidates.py  chunker.py  cold_open.py  compilation.py  config.py  diarize.py  frames.py  ingest.py  instagram_publish.py  jumpcuts.py  metadata.py  monetization_audio.py  monetization_risk.py  naming.py  overlay_pass.py  profanity.py  publish_queue.py  render.py  render_common.py  retention.py  setup.py  silence.py  style_profile.py  subtitles.py  thumbnail.py  tiktok_publish.py  transcribe.py  transitions.py  youtube_analytics.py
tests/: test_audio_energy.py  test_candidates.py  test_chunker.py  test_cold_open.py  test_compilation.py  test_config.py  test_config_example.py  test_diarize.py  test_frames.py  test_ingest.py  test_instagram_publish.py  test_integration.py  test_integration_ffmpeg.py  test_jumpcuts.py  test_metadata.py  test_monetization_audio.py  test_monetization_risk.py  test_naming.py  test_profanity.py  test_publish_queue.py  test_render.py  test_retention.py  test_setup.py  test_silence.py  test_style_profile.py  test_subtitles.py  test_thumbnail.py  test_tiktok_publish.py  test_transcribe.py  test_transitions.py  (+1 more)
(+129 files in other folders)
